--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "isomorphic-webcrypto": "^2.3.6",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-crypto": "^2.2.0"
+    "react-native-crypto": "^2.2.0",
+    "react-native-get-random-values": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
